--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^25.1.0",
-    "jest-html-reporters": "^1.2.1"
+    "jest-html-reporters": "^1.2.1",
+    "jest-json-schema": "^5.0.0"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
