--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --detectOpenHandles"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^25.1.0",
+    "jest": "^28.1.0",
     "jest-html-reporters": "^1.2.1",
     "jest-json-schema": "^5.0.0"
   },
